<resources>
    <string name="app_name">看点新闻</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">By FreshSeeker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="loading_str">正在刷新…</string>
    <string name="loaded_str">刷新完成</string>
    <string name="loaded_fail">刷新似乎不太成功</string>
    <string name="tip_double_click_exit">再点一次退出程序</string>
    <string name="github_link">https://github.com/FreshSeeker/LittleNews</string>
    <string name="some_news">看点新闻</string>
    <string name="some_ganks">来点干货</string>
    <string name="take_a_rest">休息一下</string>
    <string name="share">分享</string>
    <string name="share_to">Share to…</string>
    <string name="coming_soon">敬请期待…</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="communicate">Communicate</string>
    <string name="version">版本:</string>
    <string name="developer">developer:</string>
    <string name="dvlper_name">周康</string>
    <string name="github">GitHub:</string>
    <string name="save_to_phone">保存到手机</string>
</resources>
